# solar-track

./: .gitignore  CMakeLists.txt  README.md  solar-tracker.service  solar.ini
ardu-relays/: Makefile  ardu-relays.ino
include/: Cmd.hpp  Config.hpp  DBG.hpp  GPIO.hpp  Globals.hpp  ImuController.hpp  IntervalRunner.hpp  Motors.hpp  Mqtt.hpp  SensorController.h  SerialWorker.h  State.hpp  Sun.hpp  spa.h
ino/: Makefile  solar-motors.ino
keys/: client.csr  client.key
src/: SensorController.cpp  SerialWorker.cpp  main.cpp
